Module_15/canary/fastapi-service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-book-service-v2
spec:
  selector:
    app: fastapi-book-service
    version: v2
  ports:
  - port: 80
    targetPort: 8000
