Module_15/canary/fastapi-ingress-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-book-service-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: fastapi-book-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-book-service-v2
            port:
              number: 80
