Module_15/canary/fastapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-book-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fastapi-book-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-book-service-v1
            port:
              number: 80
